--- a/views/search-result.ejs
+++ b/views/search-result.ejs
@@ -174,8 +174,8 @@
         <!-- All JavaScript libraries -->
     <script>
     var dataset={
-      User:<%- JSON.stringify(user) %>,
-      news:<%- JSON.stringify(news) %>,
+      User:<%- JSON.stringify(yonghu) %>,
+      news:<%- JSON.stringify(xinwen) %>,
       typelist:<%- JSON.stringify(typeList) %>
     };
     </script>
@@ -222,7 +222,6 @@
                             <ul class="posted__icon">
                                 <li>
                                     <span>
-                                    <i class="icon-eye"></i>${news.commentCount}
                                 </span>
                                 </li>
                             </ul>
