--- a/views/sign.ejs
+++ b/views/sign.ejs
@@ -484,7 +484,7 @@ input {
             type: 'POST',
             data: {
               name:document.getElementById('name-in').value,
-              authority:[0],
+              quanxian:[0],
               password:document.getElementById('password-in').value
             },
             success:function(res1) {
