--- a/views/category.ejs
+++ b/views/category.ejs
@@ -213,7 +213,7 @@
                   <div class="thumbnail thumbnail_small">
                       <a href="/news?name=${news.name}" class="thumbnail__link">
                           <div style="width:270px;height:151px;">
-                          <img src="updata/images/${news.name}.jpeg" height="180" width="270" alt="News">
+                          <img src="../images/${news.name}.jpeg" height="180" width="270" alt="News">
                           </div>
                       </a>
                       <div class="caption thumbnail__caption">
@@ -242,7 +242,7 @@
             <div class="col-sm-6">
               <div class="thumbnail thumbnail_big">
                   <div >
-                  <img src="updata/images/${typenews[0].name}.jpeg" height="350" width="563" alt="News">
+                  <img src="../images/${typenews[0].name}.jpeg" height="350" width="563" alt="News">
                   <div class="caption thumbnail__caption" style="height:256px;">
                       <div class="news caption__news" style="height:186px">
                           <p class="news__category yellow-line">${getType(typenews[0].type)}</p>
