--- a/views/change.ejs
+++ b/views/change.ejs
@@ -86,7 +86,7 @@
                           <br>
                           <div class="form-group">
                             <label>新闻标题</label>
-                            <input type="text" class="form-control" id="text-1" name="name" placeholder="Name" required="required">
+                            <input type="text" class="form-control" id="text-1" name="name" placeholder="Name" required="required" readonly>
                           </div>
                           <div class="form-group">
                             <label>新闻时间</label>
