--- a/views/news.ejs
+++ b/views/news.ejs
@@ -224,7 +224,7 @@
           //news render
           $(".current").append(`
             <h1 class="text-center yel_line current__title">${news.name}</h1>
-            <img src="updata/images/${news.name}.jpeg" alt="img" class="current__img">
+            <img src="../images/${news.name}.jpeg" alt="img" class="current__img">
             ${news.content}`);
           $('p.headline__category').append(news.time.substring(0,10));
           //comments render
