--- a/views/search-result.ejs
+++ b/views/search-result.ejs
@@ -207,7 +207,7 @@
                 <div class="thumbnail thumbnail_small">
                     <a href="/news?name=${news.name}" class="thumbnail__link">
                         <div style="width:270px;height:151px;">
-                        <img src="updata/images/${news.name}.jpeg" height="180" width="270" alt="News">
+                        <img src="/images/${news.name}.jpeg" height="180" width="270" alt="News">
                         </div>
                     </a>
                     <div class="caption thumbnail__caption">
