--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -10,6 +10,7 @@
         <link href="css/main.css" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" href="css/remodal.css">
         <link rel="stylesheet" href="css/remodal-default-theme.css">
+        <link rel="stylesheet" href="css/font-awesome.min.css">
         <script src="/js/jquery-3.1.1.min.js" type="text/javascript"></script>
 
 
@@ -44,164 +45,217 @@
           .wrap-logo {
               padding-top: 18px;
           }
-          .slate_gray {
-            background: #f4f7fa;
+          .myTabDiv{
+            height: 100%;
+            background-color: #303d4a;
+            padding: 0px !important;
+          }
+          #myTab li a{
+            margin: 0;
+            border: none;
+            border-radius: 0;
+            color: #fff;
+          }
+          #myTab li a:hover{
+          background-color: #242d37;
+          }
+          #myTab{
+            border: none;
+            text-align: center;
+          }
+          #myTab>li.active>a{
+            background-color: #242d37;
           }
         </style>
     </head>
     <body >
-      <div class="remodal-bg">
+      <div class=" wrapper-sticky-footer remodal-bg ">
       <!-- Header -->
-      <header id="header" class="header">
-          <div class="header__top">
-              <div class="container">
-                  <div class="row" style="height:70px;">
-                      <div class="col-sm-3">
-                          <div class="wrap-logo">
-                              <a href="/" class="logo"></a>
-                          </div>
-                      </div>
-                      <div class="col-sm-offset-2 col-md-offset-5 col-sm-6 col-md-4 hidden-xs">
-                          <div class="col-xs-4 col-sm-5">
-                            <p class="userName"></p>
-                          </div>
-                          <div class="col-xs-6 col-sm-7">
-                              <div class="sign">
-                                  <a href="./sign"><span>sign</span></a>
+        <div class="content-sticky">
+        <header id="header" >
+            <div class="header__top">
+                <div class="container">
+                    <div class="row" style="height:70px;">
+                        <div class="col-sm-3">
+                            <div class="wrap-logo">
+                                <a href="/" class="logo"></a>
+                            </div>
+                        </div>
+                        <div class="col-sm-offset-2 col-md-offset-5 col-sm-6 col-md-4 hidden-xs">
+                            <div class="col-xs-4 col-sm-2">
+                              <p class="userName"></p>
+                            </div>
+                            <div class="col-xs-6 col-sm-5">
+                                <div class="sign">
+                                    <a href="./sign"><span>sign</span></a>
+                                </div>
+                                <div class="logout" style="display:none">
+                                    <a href="./logout"><span>logout</span></a>
+                                </div>
+                            </div>
+                            <div class="col-xs-2 col-sm-5">
+                              <div class="upload">
+                                  <a href="./upload"><span>上传新闻</span></a>
                               </div>
-                              <div class="logout" style="display:none">
-                                  <a href="./logout"><span>logout</span></a>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-          <div class="wsmenucontent overlapblackbg"></div>
-          <div class="wsmenuexpandermain slideRight">
-              <a id="navToggle" class="animated-arrow slideLeft">
-                  <span></span>
-              </a>
-          </div>
-          <div class="header_down">
-              <div class="container">
-                  <div class="wrapper clearfix bigmegamenu">
-                      <!--Main Menu HTML Code-->
-                      <nav class="wsmenu slideLeft clearfix">
-                          <ul class="mobile-sub wsmenu-list">
-                              <li class="active">
-                                  <span class="wsmenu-click"></span>
-                                  <a href="/">管理</a>
-                              </li>
-                              <li>
-                                  <span class="wsmenu-click"></span>
-                                  <a href="/upload">上传新闻</a>
-                              </li>
-                          </ul>
-                      </nav>
-                      <!--Menu HTML Code-->
-                  </div>
-              </div>
-          </div>
-      </header>
-      <!-- END header -->
-        <div class="wrap wrap_white">
-          <div class="alert alert-success" role="alert" id='alertBox-success'>Success!</div>
-          <div class="alert alert-danger" role="alert" id='alertBox-danger'>Error!</div>
-            <div class="container title">
-                <h1 class="title__h1 underscore">新闻管理</h1>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+            <div class="wsmenucontent overlapblackbg"></div>
+            <div class="wsmenuexpandermain slideRight">
+                <a id="navToggle" class="animated-arrow slideLeft">
+                    <span></span>
+                </a>
+            </div>
+        </header>
+        <!-- END header -->
+          <div class="row" style="height:100%;position:relative;">
+            <div class="alert alert-success" role="alert" id='alertBox-success'>Success!</div>
+            <div class="alert alert-danger" role="alert" id='alertBox-danger'>Error!</div>
+            <div class="myTabDiv col-md-1">
+              <ul id="myTab" class="nav nav-tabs nav-pills nav-stacked ">
+                <li class="active"><a href="#news" data-toggle="tab"><i class="fa fa-list fa-lg"></i></a></li>
+                <li><a href="#users" data-toggle="tab"><i class="fa fa-users fa-lg"></i></a></li>
+                <li><a href="#comments" data-toggle="tab"><i class="fa fa-comments fa-lg"></i></a></li>
+              </ul>
+            </div>
+            <div class="tab-content col-md-11" id="TabContent">
+              <div id="news" class="tab-pane fade in active">
+                <div class="wrap wrap_white">
+                    <div class="container title">
+                        <h1 class="title__h1 underscore">新闻管理</h1>
+                    </div>
+                </div>
+
+                <div class="wrap wrap_white pt20">
+                    <div class="container">
+                      <div class="container wrap_white">
+                          <table class="table table-bordered table-hover">
+                            <colgroup>
+                              <col style="width:10%">
+                              <col style="width:50%">
+                              <col style="width:10%">
+                              <col style="width:10%">
+                              <col style="width:20%">
+                            </colgroup>
+                            <thead>
+                              <tr>
+                                <th>#</th>
+                                <th>新闻标题</th>
+                                <th>分类</th>
+                                <th>日期</th>
+                                <th>操作</th>
+                              </tr>
+                            </thead>
+                            <tbody id='newstable'>
+
+                            </tbody>
+                          </table>
+                      </div>
+                    </div>
+                </div>
+
+              </div>
+              <div id="users" class="tab-pane fade in">
+                <div class="wrap wrap_white">
+                    <div class="container title">
+                        <h1 class="title__h1 underscore">用户管理</h1>
+                    </div>
+                </div>
+                <div class="wrap wrap_white pt20">
+                    <div class="container wrap_white">
+                        <table class="table table-bordered table-hover">
+                          <colgroup>
+                            <col style="width:10%">
+                            <col style="width:30%">
+                            <col style="width:30%">
+                            <col style="width:30%">
+                          </colgroup>
+                          <thead>
+                            <tr>
+                              <th>#</th>
+                              <th>用户名</th>
+                              <th>邮箱</th>
+                              <th>操作</th>
+                            </tr>
+                          </thead>
+                          <tbody id='userstable'>
+
+                          </tbody>
+                        </table>
+                    </div>
+                </div>
+              </div>
+              <div id="comments" class="tab-pane fade in">
+                <div class="wrap wrap_white">
+                    <div class="container title">
+                        <h1 class="title__h1 underscore">评论管理</h1>
+                    </div>
+                </div>
+                <div class="wrap wrap_white pt20">
+                    <div class="container wrap_white">
+                        <table class="table table-bordered table-hover">
+                          <colgroup>
+                            <col style="width:5%">
+                            <col style="width:30%">
+                            <col style="width:10%">
+                            <col style="width:10%">
+                            <col style="width:40%">
+                            <col style="width:5%">
+                          </colgroup>
+                          <thead>
+                            <tr>
+                              <th>#</th>
+                              <th>新闻标题</th>
+                              <th>用户名</th>
+                              <th>评论日期</th>
+                              <th>内容</th>
+                              <th>操作</th>
+                            </tr>
+                          </thead>
+                          <tbody id='commentstable'>
+
+                          </tbody>
+                        </table>
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <!-- END title -->
-        <div class="wrap wrap_white pt20">
+        <!-- Footer -->
+        <footer class="footer slate_gray" style="position:relative;">
             <div class="container">
-              <div class="container wrap_white">
-                  <table class="table table-bordered table-hover">
-                    <colgroup>
-                      <col style="width:10%">
-                      <col style="width:50%">
-                      <col style="width:10%">
-                      <col style="width:10%">
-                      <col style="width:20%">
-                    </colgroup>
-                    <thead>
-                      <tr>
-                        <th>#</th>
-                        <th>新闻标题</th>
-                        <th>分类</th>
-                        <th>日期</th>
-                        <th>操作</th>
-                      </tr>
-                    </thead>
-                    <tbody id='newstable'>
-
-                    </tbody>
-                  </table>
-              </div>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <p class="copyright">Copyright &copy; 2017.Company name All rights reserved.</p>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="social navbar-right">
+                            <p class="social__text">We are in social networks</p>
+                            <ul class="social__list">
+                                <li class="social__item">
+                                    <a class="facebook" href="#">
+                                        <i class="icon-facebook"></i>
+                                    </a>
+                                </li>
+                                <li class="social__item">
+                                    <a class="twitter" href="#">
+                                        <i class="icon-twitter"></i>
+                                    </a>
+                                </li>
+                                <li class="social__item">
+                                    <a class="gplus" href="#">
+                                        <i class="icon-gplus"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-        <!-- END content-->
-        <div class="wrap wrap_white">
-            <div class="container title">
-                <h1 class="title__h1 underscore">用户管理</h1>
-            </div>
-        </div>
-        <div class="wrap wrap_white pt20">
-            <div class="container wrap_white">
-                <table class="table table-bordered table-hover">
-                  <colgroup>
-                    <col style="width:10%">
-                    <col style="width:30%">
-                    <col style="width:30%">
-                    <col style="width:30%">
-                  </colgroup>
-                  <thead>
-                    <tr>
-                      <th>#</th>
-                      <th>用户名</th>
-                      <th>邮箱</th>
-                      <th>操作</th>
-                    </tr>
-                  </thead>
-                  <tbody id='userstable'>
-
-                  </tbody>
-                </table>
-            </div>
-        </div>
-
-        <div class="wrap wrap_white">
-            <div class="container title">
-                <h1 class="title__h1 underscore">评论管理</h1>
-            </div>
-        </div>
-        <div class="wrap wrap_white pt20">
-            <div class="container wrap_white">
-                <table class="table table-bordered table-hover">
-                  <colgroup>
-                    <col style="width:5%">
-                    <col style="width:30%">
-                    <col style="width:10%">
-                    <col style="width:10%">
-                    <col style="width:40%">
-                    <col style="width:5%">
-                  </colgroup>
-                  <thead>
-                    <tr>
-                      <th>#</th>
-                      <th>新闻标题</th>
-                      <th>用户名</th>
-                      <th>评论日期</th>
-                      <th>内容</th>
-                      <th>操作</th>
-                    </tr>
-                  </thead>
-                  <tbody id='commentstable'>
-
-                  </tbody>
-                </table>
-            </div>
-        </div>
+        </footer>
       </div>
         <div class="remodal" data-remodal-id="modal">
           <button data-remodal-action="close" class="remodal-close"></button>
@@ -224,6 +278,7 @@
   console.debug(dataset);
   </script>
   <script src="js/remodal.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
   <script>
 
     function alertMsg(type,msg){
