--- a/views/examine.ejs
+++ b/views/examine.ejs
@@ -91,15 +91,17 @@
                 <div class="alert alert-danger" role="alert" id='alertBox-danger'>Error!</div>
                 <div class="myTabDiv col-md-1">
                   <ul id="myTab" class="nav nav-tabs nav-pills nav-stacked ">
-                  	<li class="active"><a href="#news" data-toggle="tab"><i class="fa fa-list fa-lg"></i></a></li>
-                  	<li><a href="#admins" data-toggle="tab"><i class="fa fa-users fa-lg"></i></a></li>
+                <!--   	<li class="active"><a href="#news" data-toggle="tab"><i class="fa fa-list fa-lg"></i></a></li>
+                  	<li><a href="#admins" data-toggle="tab"><i class="fa fa-users fa-lg"></i></a></li> -->
+                      <li class="active"><a href="#news" data-toggle="tab"><i class="fa fa-lg"></i>审核管理</a></li>
+                    <li><a href="#admins" data-toggle="tab"><i class="fa fa-lg"></i>权限管理</a></li>
                   </ul>
                 </div>
                 <div class="tab-content col-md-11" id="TabContent">
                   <div id="news" class="tab-pane fade in active">
                     <div class="wrap wrap_white">
                         <div class="container title">
-                            <h1 class="title__h1 underscore">待审核</h1>
+                            <h1 class="title__h1 underscore">审核管理</h1>
                         </div>
                     </div>
                     <div class="wrap wrap_white pt20">
@@ -116,7 +118,7 @@
                   <div id="admins" class="tab-pane fade in">
                     <div class="wrap wrap_white">
                       <div class="container title">
-                            <h1 class="title__h1 underscore">管理员管理</h1>
+                            <h1 class="title__h1 underscore">权限管理</h1>
                         </div>
                     </div>
                     <div class="wrap wrap_white pt20">
