--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -72,6 +72,7 @@
           }
           .tablecontent{
             margin-left: 0;
+            margin-right: 0;
           }
         </style>
     </head>
