--- a/views/examine.ejs
+++ b/views/examine.ejs
@@ -61,6 +61,7 @@
         }
         .tablecontent{
           margin-left: 0;
+          margin-right: 0;
         }
         </style>
     </head>
